Fix ime candidate window issue for autocomplete

Changes:
Use composition text instead of Textfield::SetText() for autocomplete
text to avoid cancelling candidate popup window.

Bug: 897206
Test: SearchBoxViewAutocompleteTest.SearchBoxAutocompletesNotHandledForIME

Change-Id: I876aa4fd4c755b98437a28ed463a19b0e067be15
Reviewed-on: https://chromium-review.googlesource.com/c/1340831
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611459}